Create Crafting UI

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/STF/Pack03-LandscapePro/Maps/InteractableWorld.InteractableWorld
+EditorStartupMap=/Game/STF/Pack03-LandscapePro/Maps/InteractableWorld.InteractableWorld
 GlobalDefaultGameMode=/Game/ThirdPerson/InvGameMode.InvGameMode_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
